--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "eslint": "^8",
